# rules_rs

./: .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  manifest
.bcr/: metadata.template.json
.github/workflows/: publish.yaml
rs/: extensions.bzl  rust_crate.bzl
rs/experimental/: rules_rust.bzl
rs/experimental/patches/: bootstrap-linkstatic.patch
rs/experimental/toolchains/: BUILD.bazel  declare_rust_analyzer_toolchains.bzl  declare_rustc_toolchains.bzl  module_extension.bzl
rs/private/: BUILD.bazel  cfg_parser.bzl  crate_repository.bzl  repository_utils.bzl  resolver.bzl  rust_analyzer_repository.bzl  rust_src_repository.bzl  rustc_repository.bzl  toolchains_repository.bzl
test/: BUILD.bazel  MODULE.bazel
test/many_workspace_deps/: Cargo.toml
