[package]
name = "test"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
actix-web = "4.11.0"
apple-codesign = "0.27.0"
axum = "0.8.4"
#bevy = "0.16.1"
ballista = "48.0.0"
bindgen = "0.72.1"
candle-core = "0.9.1"
cssparser = "0.35.0"
datafusion = "50.0.0"
deltalake = "0.28.1"
diesel = "2.3.2"
ethers = "2.0.14"
# Need feature evaluation!
# gix = "0.73.0"
iced = "0.13.1"
image = "0.25.8"
leptos = "0.8.9"
libssh2-sys = "0.3.1"
libp2p = "0.56.0"
meilisearch-sdk = "0.30.0"
oxc = "0.90.0"
#perseus = "0.4.2"
polars = "0.51.0"
redis = "0.32.5"
reqwest = "0.12.23"
solana-client = "3.0.3"
swc = "40.0.0"
tantivy = "0.25.0"
#tauri = "2.8.5" - gtk-rs components like javascriptcore-rs-sys
tonic = "0.14.2"
tower = "0.5.2"
walrus = "0.23.3"
warp = "0.4.2"
#wasmer = "6.0.1"
wasmtime = "37.0.0"
wasm-bindgen = "0.2.103"
#webrender = "0.61.0"
wgpu = "26.0.1"
#wry = "0.53.3"
yew = "0.21.0"

[target.'cfg(not(windows))'.dependencies]
tao = "0.34.3"
